简单状态服务器实现

--- a/NovaChatGateServer/CMakeLists.txt
+++ b/NovaChatGateServer/CMakeLists.txt
@@ -7,4 +7,4 @@ include_directories(${HEAD_PATH})
 
 add_executable(${APP1} ${SRC})
 
-target_link_libraries(NovaChatGateServer PRIVATE ZLIB::ZLIB unofficial::uwebsockets::uwebsockets nlohmann_json::nlohmann_json PostgreSQL::PostgreSQL libpqxx::pqxx hiredis::hiredis redis++::redis++ Boost::asio gRPC::gpr gRPC::grpc gRPC::grpc++ gRPC::grpc++_alts Boost::filesystem)
+target_link_libraries(${APP1} PRIVATE ZLIB::ZLIB unofficial::uwebsockets::uwebsockets nlohmann_json::nlohmann_json PostgreSQL::PostgreSQL libpqxx::pqxx hiredis::hiredis redis++::redis++ Boost::asio gRPC::gpr gRPC::grpc gRPC::grpc++ gRPC::grpc++_alts Boost::filesystem)
