--- a/NovaChatStatusServer/CMakeLists.txt
+++ b/NovaChatStatusServer/CMakeLists.txt
@@ -7,4 +7,4 @@ include_directories(${HEAD_PATH})
 
 add_executable(${APP2} ${SRC})
 
-target_link_libraries(NovaChatStatusServer PRIVATE ZLIB::ZLIB unofficial::uwebsockets::uwebsockets nlohmann_json::nlohmann_json PostgreSQL::PostgreSQL libpqxx::pqxx hiredis::hiredis redis++::redis++ Boost::asio gRPC::gpr gRPC::grpc gRPC::grpc++ gRPC::grpc++_alts Boost::filesystem)
+target_link_libraries(${APP2} PRIVATE ZLIB::ZLIB unofficial::uwebsockets::uwebsockets nlohmann_json::nlohmann_json PostgreSQL::PostgreSQL libpqxx::pqxx hiredis::hiredis redis++::redis++ Boost::asio gRPC::gpr gRPC::grpc gRPC::grpc++ gRPC::grpc++_alts Boost::filesystem)
