客户端简易tcp管理类实现

--- a/NovaChatStatusServer/config.ini
+++ b/NovaChatStatusServer/config.ini
@@ -1,11 +1,6 @@
-[GateServer]
-Port = 2992
-[VerifyServer]
-Host = 127.0.0.1
-Port = 50051
 [StatusServer]
-Host = 127.0.0.1
 Port = 50052
+Host = 0.0.0.0
 [PostgreSQL]
 Host = 127.0.0.1
 Port = 5432
@@ -15,4 +10,12 @@ Databasename = NovaData
 [Redis]
 Host = 127.0.0.1
 Port = 6381
-Password = 123456
+Passwd = 123456
+[chatservers]
+Name = chatserver1,chatserver2
+[ChatServer1]
+Host = 127.0.0.1
+Port = 8090
+[ChatServer2]
+Host = 127.0.0.1
+Port = 8091
