服务端简易分布式服务器实现

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,13 @@ project ("NovaChat")
 set(HEAD_PATH ${CMAKE_CURRENT_SOURCE_DIR}/include)
 set(GATE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/NovaChatGateServer)
 set(STATUS_PATH ${CMAKE_CURRENT_SOURCE_DIR}/NovaChatStatusServer)
+set(SERVER_PATH ${CMAKE_CURRENT_SOURCE_DIR}/NovaChatServer)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++20")
 
 set(APP1 NovaChatGateServer)
 set(APP2 NovaChatStatusServer)
+set(APP3 NovaChatServer)
 
 find_package(ZLIB REQUIRED)
 find_package(unofficial-uwebsockets CONFIG REQUIRED)
@@ -30,3 +32,4 @@ find_package(boost_filesystem REQUIRED CONFIG)
 
 add_subdirectory ("NovaChatGateServer")
 add_subdirectory ("NovaChatStatusServer")
+add_subdirectory ("NovaChatServer")
